<resources>
    <string name="app_name">ClockPackage</string>
    <string name="meridiem_am">오전</string>
    <string name="meridiem_pm">오후</string>
    <string name="day_mon_str">월</string>
    <string name="day_tue_str">화</string>
    <string name="day_wed_str">수</string>
    <string name="day_thu_str">목</string>
    <string name="day_fri_str">금</string>
    <string name="day_sat_str">토</string>
    <string name="day_sun_str">일</string>
    <string name="alarm_list_no_item">알람이 없습니다.</string>
    <string name="alarm">알람</string>
    <string name="add">추가</string>
    <string name="edit">편집</string>
    <string name="sort">정렬</string>
    <string name="setting">설정</string>
    <string name="inquire">문의하기</string>
    <string name="desc_move_alarm_list_item">알람 아이템 순서 바꾸기</string>
    <string name="world_clock">세계시각</string>
    <string name="stop_watch">스탑워치</string>
    <string name="timer">타이머</string>
    <string name="title_activity_alarm_detail">AlarmDetailActivity</string>

    <string name="none_use">사용 안함</string>
    <string name="alarm_sound">알람음</string>
    <string name="alarm_sound_summary_on">굿모닝 캔자스 (Feat. 다원)</string>
    <string name="alarm_sound_summary_off">@string/none_use</string>
    <string name="alarm_vibrate">진동</string>
    <string name="alarm_vibrate_summary_on">Basic call</string>
    <string name="alarm_vibrate_summary_off">@string/none_use</string>
    <string name="alarm_repeat">다시울림</string>
    <string name="alarm_repeat_summary_on">5분, 3회</string>
    <string name="alarm_repeat_summary_off">@string/none_use</string>
    <string name="alarm_title">알람 이름</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="desc_open_date_picker">open date picker</string>
</resources>