<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:contentDescription="@string/add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_edit"
        android:contentDescription="@string/edit"
        android:title="@string/edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort"
        android:contentDescription="@string/sort"
        android:title="@string/sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_setting"
        android:contentDescription="@string/setting"
        android:title="@string/setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_inquire"
        android:contentDescription="@string/inquire"
        android:title="@string/inquire"
        app:showAsAction="never" />
</menu>