<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_alarm">

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.quokkaman.android.app.ui.main.alarm.AlarmFragment"
        android:label="@string/alarm"
        tools:layout="@layout/alarm_fragment"
        />

    <fragment
        android:id="@+id/navigation_world_clock"
        android:name="com.quokkaman.android.app.ui.main.world.WorldClockFragment"
        android:label="@string/world_clock"
        tools:layout="@layout/world_clock_fragment"
        />


    <fragment
        android:id="@+id/navigation_stopwatch"
        android:name="com.quokkaman.android.app.ui.main.stopwatch.StopWatchFragment"
        android:label="@string/stop_watch"
        tools:layout="@layout/stop_watch_fragment"
        />


    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.quokkaman.android.app.ui.main.timer.TimerFragment"
        android:label="@string/timer"
        tools:layout="@layout/timer_fragment"
        />

</navigation>