<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.quokkaman.android.app.ui.edit.AlarmEditViewModel" />

        <variable
            name="planViewModel"
            type="com.quokkaman.android.app.ui.edit.AlarmPlanViewModel" />

        <variable
            name="soundSwitchModel"
            type="com.quokkaman.android.app.ui.edit.AlarmSettingSwitchModel" />

        <variable
            name="repeatSwitchModel"
            type="com.quokkaman.android.app.ui.edit.AlarmSettingSwitchModel" />

        <variable
            name="vibrateSwitchModel"
            type="com.quokkaman.android.app.ui.edit.AlarmSettingSwitchModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            onUpdateTime="@{viewModel.updateTime}"
            setTime="@{viewModel.timeLiveData}"
            app:layout_constraintBottom_toTopOf="@id/scrollview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_picker">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/item_alarm_padding">

                <include
                    layout="@layout/item_edit_alarm_plan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:viewModel="@{planViewModel}" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.titleLiveData}"
                    android:hint="@string/alarm_title" />

                <include
                    layout="@layout/item_edit_setting_switch"
                    app:switchModel="@{soundSwitchModel}"
                    app:setting="@{soundSwitchModel.settingLiveData}"
                    app:enabled="@{soundSwitchModel.enabledLiveData}"
                    />

                <include
                    layout="@layout/item_edit_setting_switch"
                    app:switchModel="@{vibrateSwitchModel}"
                    app:setting="@{vibrateSwitchModel.settingLiveData}"
                    app:enabled="@{vibrateSwitchModel.enabledLiveData}" />

                <include
                    layout="@layout/item_edit_setting_switch"
                    app:switchModel="@{repeatSwitchModel}"
                    app:setting="@{repeatSwitchModel.settingLiveData}"
                    app:enabled="@{repeatSwitchModel.enabledLiveData}" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollview">

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onCancel()}"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onSave()}"
                android:text="@string/save" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>